# main_frame

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README-AFFINE.md  README.md  install.sh  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
skills/github/: SKILL.md
skills/github/actions/: list_prs.py
src/mainframe/: __main__.py
src/mainframe/cli/: app.py  display.py  rich_input.py
src/mainframe/cli/commands/: auth.py  chat.py  extras.py  mcp.py  memory.py  run.py  skills.py  telegram_bot.py
src/mainframe/config/: loader.py  paths.py  schema.py
src/mainframe/core/: agent.py  errors.py  events.py  mcp_auth.py  mcp_client.py  session.py
src/mainframe/memory/: base.py  hybrid.py  manager.py  sqlite_store.py  vector_store.py
src/mainframe/providers/: anthropic.py  base.py  registry.py
src/mainframe/security/: credentials.py  sanitize.py
src/mainframe/skills/: actions.py  loader.py  manifest.py  registry.py  sandbox.py  verifier.py
src/mainframe/tools/: base.py  mcp_adapter.py  policy.py  registry.py
src/mainframe/tools/builtins/: __init__.py  bash.py  connect_mcp.py  create_skill.py  edit_file.py  glob_search.py  grep_search.py  image_analysis.py  memory_search.py  read_file.py  web_fetch.py  web_search.py  write_file.py
tests/: conftest.py
tests/unit/: test_config.py  test_create_skill.py  test_credentials.py  test_mcp.py  test_memory.py  test_session.py  test_skills.py  test_tools.py
