[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mainframe"
version = "0.1.0"
description = "A secure, extensible AI agent framework"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "click>=8.1",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "html2text>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[project.scripts]
mainframe = "mainframe.cli.app:cli"
computer = "mainframe.cli.app:quick_chat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
